# git-for-science

./: .gitignore  LICENSE  README.md  _files_gitignore.qmd  _introduction.qmd  _workflow_code_review.qmd  _workflow_merge_requests.qmd  index.html  mirror.sh  myfile.txt  pyproject.toml
.github/workflows/: deploy_slides.yml
pyndulum/: pendulum_equations.py
pyndulum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
slides/: _basic_commands.qmd  _files_LICENSE.qmd  _files_README.qmd  _workflow_branches.qmd  _workflow_issues.qmd  custom.scss  git_for_science.qmd  references.bib
